--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,73 @@
+/* style.css */
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
+}
+
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+}
+
+.greetings {
+    font-size: 36px;
+    font-weight: bold;
+    letter-spacing: 10px;
+}
+
+.description {
+    font-size: 18px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.button {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.botones {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.botones:hover {
+    background-color: #555;
+}
+
+/* Media queries para dispositivos móviles */
+
+@media (max-width: 768px) {
+    header {
+        padding: 10px;
+    }
+    .greetings {
+        font-size: 24px;
+    }
+    .description {
+        font-size: 16px;
+    }
+    .button {
+        margin-top: 10px;
+    }
+    .botones {
+        padding: 5px 10px;
+        font-size: 16px;
+    }
+}
 *,
 *::after,
 *::before {
